--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
+    "express": "^4.18.1",
+    "mongoose": "^6.3.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
@@ -20,5 +22,8 @@
   "devDependencies": {
     "@babel/core": "^7.12.9"
   },
-  "private": true
+  "private": true,
+  "repository": "https://github.com/tangxuanlong/Travel.git",
+  "author": "Long <tangxuanlong2000@gmail.com>",
+  "license": "MIT"
 }
