--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "dotenv": "^16.0.1",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
     "express": "^4.18.1",
