--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "travel",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "mongodb.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -15,7 +15,8 @@
     "expo-status-bar": "~1.3.0",
     "express": "^4.18.1",
     "mongodb": "^4.6.0",
-    "mongoose": "^6.3.4",
+    "mongoose": "^6.3.5",
+    "nodemon": "^2.0.16",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
